# FormulaSearch

./: formula.py  formulas.fs  main.py  pyproject.toml  searcher.py
